---
title: ChatNode application
---

erDiagram
    User {
        UUIDv4 id pk
        string username unique
        string email unique
        string passwordHash
        string displayName
        string avatarUrl
        datetime lastSeen
        datetime createdAt
        datetime updatedAt
    }
    
    FriendRequest {
        UUIDv4 id pk
        UUIDv4 fromUserId fk
        UUIDv4 toUserId fk
        string status "pending|accepted|rejected"
        datetime createdAt
        datetime updatedAt
    }
    
    Friend {
        UUIDv4 id pk
        UUIDv4 userId fk
        UUIDv4 friendId fk
        datetime createdAt
        datetime updatedAt
    }
    
    Conversation {
        UUIDv4 id pk
        string type "direct|group"
        string name "for group chats"
        string avatarUrl "for group chats"
        UUIDv4 createdBy fk
        datetime createdAt
        datetime updatedAt
    }
    
    ConversationParticipant {
        UUIDv4 id pk
        UUIDv4 conversationId fk
        UUIDv4 userId fk
        datetime joinedAt
        datetime lastReadAt
        boolean isAdmin
        boolean isMuted
    }
    
    Message {
        UUIDv4 id pk
        UUIDv4 conversationId fk
        UUIDv4 senderId fk
        string content
        string type "text|image|file|voice"
        string attachmentUrl
        UUIDv4 replyToMessageId fk "nullable"
        boolean isEdited
        boolean isDeleted
        datetime createdAt
        datetime updatedAt
    }
    
    MessageStatus {
        UUIDv4 id pk
        UUIDv4 messageId fk
        UUIDv4 userId fk
        string status "sent|delivered|read"
        datetime statusAt
    }
    
    User ||--o{ FriendRequest : "sends"
    User ||--o{ FriendRequest : "receives"
    User ||--o{ Friend : "has"
    User ||--o{ ConversationParticipant : "participates"
    User ||--o{ Message : "sends"
    User ||--o{ MessageStatus : "has"
    
    Conversation ||--o{ ConversationParticipant : "includes"
    Conversation ||--o{ Message : "contains"
    
    Message ||--o{ MessageStatus : "tracks"
    Message ||--o| Message : "replies to"

	
	